product list add

--- a/products.html
+++ b/products.html
@@ -6,6 +6,10 @@
         <title>Document</title>
     </head>
     <body>
-     <h1>This is products page</h1>   
+     <h1>This is products page</h1>
+     <ul>
+           <li>product1</li>
+           <li>product2</li>
+        </ul>   
     </body>
 </html>
